--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "pytest --cov=project --cov-fail-under=50 --cov-report=term-missing tests",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "check": "lint-staged"
   },
   "husky": {
     "hooks": {
