test(coverage): show coverage at every run

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "lint-staged": {
     "**/*.py": [
+      "pytest --cov=project --cov-fail-under=50 --cov-report=term-missing tests",
       "isort -rc -y -ac -ls",
       "black",
       "pylint --errors-only",
