build(dockerfile): add dockerfile linter

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
       "mypy --ignore-missing-imports",
       "bandit",
       "git add"
+    ],
+    "**/Dockerfile": [
+      "hadolint"
     ]
   },
   "repository": {
