--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "commitizen": "^4.1.2",
     "cz-conventional-changelog": "^3.1.0",
+    "dot-prop": "^5.2.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "lodash": "^4.17.19",
