--- a/.pylintrc
+++ b/.pylintrc
@@ -140,6 +140,8 @@ disable=print-statement,
         exception-escape,
         comprehension-escape,
         R0903, # too few public methods
+        R0201, # Method could be a function (no-self-use)
+        W0621, # Redefining name 'client' from outer scope
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
