--- a/.pylintrc
+++ b/.pylintrc
@@ -142,6 +142,7 @@ disable=print-statement,
         R0903, # too few public methods
         R0201, # Method could be a function (no-self-use)
         W0621, # Redefining name 'client' from outer scope
+        C0116, # Missing function or method docstring (missing-function-docstring)
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
