ci(hadolint): ignore some error

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
       "git add"
     ],
     "**/Dockerfile*": [
-      "hadolint"
+      "hadolint --ignore DL3008 --ignore DL3013"
     ]
   },
   "repository": {
