build(poetry): upgrade isort

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "lint-staged": {
     "**/*.py": [
       "pytest --cov=project --cov-fail-under=50 --cov-report=term-missing tests",
-      "isort -rc -y -ac -ls",
+      "isort --ac --ls",
       "black",
       "flake8 --config .flake8",
       "mypy --ignore-missing-imports",
