--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS; pip freeze | safety check --full-report --stdin"
+      "commit-msg": "bash .github/branch_protected.sh && commitlint -E HUSKY_GIT_PARAMS && pip freeze | safety check --full-report --stdin"
     }
   },
   "lint-staged": {
