:art: (test) test

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -5,12 +5,7 @@ on:
     branches:
       - master
       - prod
-  workflow_dispatch:
-    inputs:
-      ManuallyTrigger:
-        description: 'Run workflow to manually trigger the workflow'     
-        required: false
-        default: 'just click the button'
+  workflow_dispatch
 
 jobs:
 
