--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -17,5 +17,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Bｚuild the Docker image
       run: |
-      echo helloworld~
+      echo "helloworld~"
       docker build . --file Dockerfile --tag my-image-name:$(date +%s)
