--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
       "flake8 --config .flake8",
       "mypy --ignore-missing-imports",
       "bandit -lll",
+      "vulture --min-confidence 65",
       "git add"
     ],
     "**/Dockerfile*": [
